# amoki

./: .gitignore  LICENSE.md  README.md  pyproject.toml
amoki/: config.py
amoki/utilities/: sentinelhub_utils.py
notebooks/: readme.md
notebooks/case_studies/hambach/: CS_hambach_Clouds.ipynb  CS_hambach_DEM.ipynb
notebooks/case_studies/oetelshofen/: CS_oetelshofen_Clouds.ipynb  CS_oetelshofen_DEM.ipynb  CS_oetelshofen_Segmentation.ipynb  CS_oetelshofen_Spectral.ipynb
notebooks/samgeo/: tutorial.ipynb
references/: SENTINEL2_L1C_bands.yaml  readme.md
